--- a/pages/tools/Mylyn.textile
+++ b/pages/tools/Mylyn.textile
@@ -1,14 +1,10 @@
 ---
 layout: default
-title: Mylyn任务管理工具
+title: Mylyn
+description: Mylyn任务管理工具
 ---
 
-<div id="charpter">
-h3. Mylyn任务管理工具
-* "Mylyn":#1
-</div>
-
-h1. {{ page.title }}
+{% include header.ext %}
 
 
 p(#1). *一、Mylyn*
