--- a/_posts/2012-08-07-create-blogs-on-github.textile
+++ b/_posts/2012-08-07-create-blogs-on-github.textile
@@ -2,11 +2,6 @@
 layout: post
 title: 在Github创建博客
 description: 这是文章描述
-categories: [category, develop]
+categories: [archive]
 tags: [a, b, c]
 ---
-
-<header class="jumbotron subhead" id="overview">
-  <h1>Archive</h1>
-  <p class="lead">日志归档</p>
-</header>
