--- a/pages/development/android.textile
+++ b/pages/development/android.textile
@@ -68,7 +68,7 @@ title: Android
 </section>
 
 h3(#3). Android动画 %(title)动画%
-<hr />
+
 
 *(3#301) *Tween Animation* %(title)Tween%
 ** "平移":android/TranslateAnimation.html - TranslateAnimation
@@ -80,30 +80,30 @@ h3(#3). Android动画 %(title)动画%
 ** "逐帧动画":android/AnimationDrawable.html - AnimationDrawable
 
 h3(#4). Threads线程 %(title)线程%
-<hr />
+
 
 *(4#41) "AsyncTask 异步任务":android/AsyncTask.html %(title)AsyncTask%
 
 h3(#5). 常用 %(title)常用%
-<hr />
+
 
 *(5#501) *获取当前系统版本号* %(title)获取系统版本%
-<hr />
+
 
 pre. android.os.Build.VERSION.SDK_INT
 
 *(5#502) *横屏显示* %(title)横屏显示%
-<hr />
+
 
 pre. <activity android:screenOrientation="landscape"
 
 *(5#503) *全屏无标题栏显示* %(title)全屏无标题栏显示%
-<hr />
+
 
 pre. <application android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
 
 *(5#504) *无标题栏显示* %(title)无标题栏显示%
-<hr />
+
 
 <pre class="prettyprint linenums">
 <!-- XML实现 -->
@@ -116,7 +116,7 @@ requestWindowFeature(Window.FEATURE_NO_TITLE);
 </pre>
 
 *(#505) *自定义标题栏布局* %(title)%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // 1.Activity：
@@ -166,7 +166,7 @@ getWindow().setFeatureInt(Window.FEATURE_CUSTOM_TITLE, R.layout.main_title);
 </pre>
 
 *(5#506) *自定义标题栏背景与高度* (上面只是自定义标题栏的而已，而背景与高度还是没有变化，接下来就要处理标题栏背景与高度) %(title)自定义标题栏%
-<hr />
+
 
 <pre class="prettyprint linenums">
 <!-- 1.创建value/styles.xml文件 -->
@@ -186,7 +186,7 @@ getWindow().setFeatureInt(Window.FEATURE_CUSTOM_TITLE, R.layout.main_title);
 </pre>
 
 *(5#507) *ListView滚动加载更新数据* %(title)ListView滚动更新%
-<hr />
+
 
 <pre class="prettyprint linenums">
 ListView.setOnScrollListener(new OnScrollListener() {
@@ -207,7 +207,7 @@ ListView.setOnScrollListener(new OnScrollListener() {
 </pre>
 
 *(5#508) *异常处理* (提示用户把异常信息回馈给公司) %(title)异常处理%
-<hr />
+
 
 <pre class="prettyprint linenums">
 //==================================================================================
@@ -275,7 +275,7 @@ public class App extends Application {
 </pre>
 
 *(5#509) *在子线程中使用主线程的消息队列* %(title)子线程消息%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // 创建消息队列
@@ -287,7 +287,7 @@ Looper.loop();
 </pre>
 
 *(5#510) *获取应用版本号并在线更新应用* %(title)在线更新应用%
-<hr />
+
 
 <pre class="prettyprint linenums">
 PackageInfo pi = Context.getPackageManager().getPackageInfo(Context.getPackageName(), 0);
@@ -296,7 +296,7 @@ pi.versionName;
 </pre>
 
 *(5#511) *杀死后台进程* %(title)杀死后台进程%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // 如果系统版本小于2.2的话
@@ -308,7 +308,7 @@ if (android.os.Build.VERSION.SDK_INT < 8) {
 </pre>
 
 *(5#513) *发短信/彩信* %(title)发短信%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // 标准
@@ -328,11 +328,11 @@ if (message > 70) {
 </pre>
 
 *(5#514) *Intent用法全面总结* %(title)常用Intent%
-<hr />
+
 ** "Intent用法全面总结":android/Intent.html
 
 *(5#515) *判断sdcard是否存在* %(title)sdcard是否存在%
-<hr />
+
 
 <pre class="prettyprint linenums">
 public boolean isSdCardExists() { 
@@ -345,7 +345,7 @@ public boolean isSdCardExists() {
 </pre>
 
 *(5#516) *判断某个服务是否正在运行* %(title)服务是否正在运行%
-<hr />
+
 
 <pre class="prettyprint linenums">
 public boolean isServiceRunning(String serviceName) { 
@@ -360,7 +360,6 @@ public boolean isServiceRunning(String serviceName) {
 </pre>
 
 *(5#517) *获取已安装的软件信息* %(title)获取已安装软件信息%
-<hr />
 
 <pre class="prettyprint linenums">
 public List<HashMap<String, Object>> getInstalledApps() { 
@@ -388,11 +387,18 @@ public List<HashMap<String, Object>> getInstalledApps() {
 }
 </pre>
 
+*(5#517) *隐藏键盘*
+
+<pre class="prettyprint linenums">
+InputMethodManager imm = ((InputMethodManager)getSystemService(Context.INPUT_METHOD_SERVICE));
+imm.hideSoftInputFromWindow(this.getCurrentFocus().getWindowToken(),InputMethodManager.HIDE_NOT_ALWAYS);
+</pre>
+
 h3(#6). 优化 %(title)优化%
-<hr />
+
 
 *(6#601) *ListView优化* %(title)ListView优化%
-<hr />
+
 
 <pre class="prettyprint linenums">
 class ViewHolder{
@@ -411,7 +417,7 @@ public View getView(...){
 </pre>
 
 *(6#602) *图片缓存* 软引用办法实现缓存 %(title)图片缓存%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // 集合
@@ -427,15 +433,15 @@ imageCache.put(imageUrl, new SoftReference<Drawable>(bitmap));
 </pre>
 
 *(6#603) *使用线程池优化性能* %(title)线程池%
-<hr />
+
 ** "ThreadPool":android/ThreadPool.html
 
 *(6#604) *完成退出程序* %(title)完全退出%
-<hr />
+
 ** "完成退出程序":android/exitApplication.html
 
 h3(#7). 网络编程 %(title)网络编程%
-<hr />
+
 
 * *URL* & *URLConnection* （常用于下载文件）
 ** 下载文件
@@ -454,10 +460,10 @@ h3(#7). 网络编程 %(title)网络编程%
 * *Socket* （TCP & UDP）
 
 h3(#8). 资源 %(title)资源%
-<hr />
+
 
 *(8#801) *drawable* %(title)drawable%
-<hr>
+
 
 <pre class="prettyprint linenums">
 <!-- XML中使用该类型资源 -->
@@ -470,7 +476,7 @@ Drawable icon = getResources().getDrawable(R.drawable.icon);
 </pre>
 
 *(8#802) *values* %(title)values%
-<hr>
+
 
 <pre class="prettyprint linenums">
 <!-- XML中使用该类型资源 -->
@@ -491,14 +497,14 @@ int color = getResources().getColor(R.color.black);
 </pre>
 
 *(8#803) *raw* %(title)raw%
-<hr>
+
 
 <pre class="prettyprint linenums">
 InputStream in = getResources().openRawResource(R.raw.test);
 </pre>
 
 *(8#804) *assets* %(title)assets%
-<hr>
+
 
 <pre class="prettyprint linenums">
 AssetManager assetManager = getResources().getAssets();
@@ -506,17 +512,17 @@ InputStream is = assetManager.open("文件名", MODE_APPEND);
 </pre>
 
 h3(#9). 安全专题 %(title)安全专题%
-<hr>
+
 
 * *基本介绍*
-<hr />
+
 ** *AndroidManifest.xml*
-<hr>
+
 *** 作用1：声明包名且唯一
 *** 作用2：声明程序的组件
 *** 作用3：声明程序的权限
 ** *Activity*
-<hr>
+
 *** 作用1：与用户交互的界面
 *** 作用2：一个View容器
 *** 作用3：受ActivityManager管理，维护Activity的task栈
@@ -525,33 +531,33 @@ h3(#9). 安全专题 %(title)安全专题%
 *** 作用6：运行在当前程序的进程中
 *** 作用7：可以添加权限
 ** *Intent* （意图）
-<hr>
+
 *** 作用1：描述一个操作
 *** 作用2：简单IPC的实现（进程间通信）
 *** 作用3：传递数据
 *** 作用4：激活3大组件（Activity，Service，Broadcast）
 ** *Broadcast Receiver* （广播）
-<hr>
+
 *** 作用1：接受广播的intent
 *** 作用2：在清单文件中注册
 *** 作用3：无序广播（异步），不可被终止
 *** 作用4：有序广播（同步），可以被终止
 ** *Service*  （服务）
-<hr />
+
 *** 作用1：后台运行的组件
 *** 作用2： 默认不在单独进程中
 *** 作用3：运行在主线程中
 *** 作用4：没有界面的Activity
 
 * *沙箱机制*
-<hr />
+
 
 <pre>
 就是签名与权限的验证机制，只要遵守这个机制就可以超越一些安全防锁，但很麻烦
 </pre>
 
 * *0权限重启手机*
-<hr />
+
 
 <pre class="prettyprint linenums">
 // 0权限重启手机
@@ -581,7 +587,7 @@ while(true){
 </pre>
 
 * *0权限开机启动* （Android系统漏洞）
-<hr />
+
 
 <pre class="prettyprint linenums">
 <!-- BootCompleteReceiver需要继承BroadcastReceiver -->
@@ -604,21 +610,21 @@ public class BootCompleteReceiver extends BroadcastReceiver {
 </pre>
 
 * *流氓服务* （不死的服务）
-<hr />
+
 
 <pre>
 原理：在服务1被结束时启动服务2，在服务2结束时启动服务1，如此交替。
 </pre>
 
 * *隐私* （Logcat大法：adb logcat -b xxx）
-<hr />
+
 ** Main     /dev/log/main
 ** Events   /dev/log/events
 ** Radio    /dev/log/radio
 ** System   /dev/log/system
 
 * *Logcat实操* 目的：通过服务获取手机的所有日志并上传到服务器
-<hr />
+
 
 <pre class="prettyprint linenums">
 public class ReadLogService extends Service {
@@ -650,7 +656,7 @@ public class ReadLogService extends Service {
 </pre>
 
 * *0权限访问网络* （上传）
-<hr />
+
 
 <pre class="prettyprint linenums">
 public class ViewWebService extends Service {
@@ -723,10 +729,10 @@ public class ViewWebService extends Service {
 </pre>
 
 h3(#10). 多媒体 %(title)多媒体%
-<hr />
+
 
 *(10#1001) *从相册中获取图片* %(title)获取图片%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // 打开相册的意图
@@ -744,7 +750,7 @@ public void onActivityResult(...) {
 </pre>
 
 *(10#1002) *从相册中获取图片并按屏幕大小比例缩放显示* %(title)比例缩放%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // 获取屏幕宽高
@@ -760,7 +766,7 @@ Math.deil(bfo.outWidth / display.getWidth());
 </pre>
 
 *(10#1003) *获取图片Exif信息* %(title)Exif信息%
-<hr />
+
 
 <pre class="prettyprint linenums">
 ExifInterface exif = ExifInterface("图片路径");
@@ -771,7 +777,7 @@ exif.setAttribute(ExifInterface.对应的常量, "值");
 </pre>
 
 *(10#1004) *创建Bitmap拷贝* %(title)Bitmap拷贝%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // 原图
@@ -791,14 +797,14 @@ Btimap bak = bitmap;
 </pre>
 
 *(10#1005) *图形缩放（Scale）、旋转（Rotate）、平移（Translate）* %(title)图形缩旋平%
-<hr />
+
 
 <pre>
 Matrix类的使用
 </pre>
 
 *(10#1006) *颜色处理* %(title)颜色处理%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // ColorMatrix类的使用
@@ -817,7 +823,7 @@ ColorMatrix.set(new float[]{
 </pre>
 
 *(10#1007) *图片合成* %(title)图片合成%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // 混合模式PorterDuffXfermode
@@ -825,7 +831,7 @@ Paint.setXfermode(new PorterDuffXfermode(android.graphics.PorterDuff.Mode.MULTIP
 </pre>
 
 *(10#1008) *Path路径文字* 弧度 %(title)Path路径文字%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // Path类与Canvas.drawTextOnPath()方法的使用
@@ -835,7 +841,7 @@ Paint.setXfermode(new PorterDuffXfermode(android.graphics.PorterDuff.Mode.MULTIP
 </pre>
 
 *(10#1009) *人脸识别* 弧度 %(title)人脸识别%
-<hr />
+
 
 <pre class="prettyprint linenums">
 // 人脸识别
