--- a/_posts/2012-08-12-nexus7-root.textile
+++ b/_posts/2012-08-12-nexus7-root.textile
@@ -43,7 +43,7 @@ navigation: [1.准备, 2.解锁, 3.Flash Recovery]
     </pre>
 </section>
 
-<section id="4">
+<section>
     <div class="page-header">
         <h3>参考</h3>
     </div>
