--- a/pages/tools/Ant.textile
+++ b/pages/tools/Ant.textile
@@ -1,43 +1,26 @@
 ---
 layout: default
 title: Ant
+description: 项目构建工具
 ---
 
-<div id="charpter">
-
-h3. Maven
-
-</div>
-
-h1. {{ page.title }}
-
-h3(#1). *安装* %(title)安装%
-<hr />
-
-* 下载
-<hr />
-
-<pre>
-官方下载地址：http://ant.apache.org/download.html
-
-解压至D:\Development\Apache
-</pre>
-
-* 环境变量配置
-<hr />
-
-<pre>
-ANT_HOME = D:\Development\Apache\apache-ant-1.8.2
-Path = .;%ANT_HOME%\bin
-</pre>
-
-* 检查是否安装成功
-<hr />
-
-<pre>
-打开命令行输入：ant -version
-
-Apache Ant(TM) version 1.8.2 compiled on December 20 2010
-
-就表示成功了
-</pre>
+<section>
+    <div class="page-header">
+        <h1>安装 <small>环境：Ubuntu 12.04.1</small></h1>
+    </div>
+    <p>下载：http://ant.apache.org/download.html</p>
+    <pre>
+        $ mkdir /path/to/apache
+        $ mv apache-ant-1.8.4-bin.tar.gz /path/to/apache
+        $ tar -zxvf apache-ant-1.8.4-bin.tar.gz
+        $ subl ~/.bashrc
+        $ ant -version
+    </pre>
+    <pre>
+    	export ANT_HOME=/path/to/apache/apache-ant-1.8.4
+    	PATH=$PATH:$ANT_HOME/bin
+    </pre>
+    <pre>
+    	Apache Ant(TM) version 1.8.4 compiled on May 22 2012
+    </pre>
+</section>
