--- a/pages/language/c/CPP.textile
+++ b/pages/language/c/CPP.textile
@@ -44,9 +44,9 @@ table(table table-bordered).
 |\4.*备注* ：有符号类型(signed)可以表示 %(label label-info)正数% 和 %(label label-info)负数% ，而无符号类型(unsigned)只能表示 %(label label-info)正数% 和 %(label label-info)0% ，默认为 %(label label-info)signed% 。
 定义一个有符号int类型： @signed int x;@
 定义一个无符号int类型： @unsigned int y;@|
-<h3>变量</h3>
 
-<p>定义变量</p>
+    <h3>变量</h3>
+    <p>定义变量</p>
 <pre>
 // 声明变量
 int a, b, c;
@@ -56,14 +56,12 @@ a = 1;
 b = 2;
 c = 3;
 </pre>
-
-<p>变量初始化</p>
+    <p>变量初始化</p>
 <pre>
 int x = 12;     // 方式一
 int y(52);      // 方式二
 </pre>
-
-<p>字符串</p>
+    <p>字符串</p>
 <pre>
 #include <string>       // 需要引用string头文件
 ...
@@ -77,7 +75,7 @@ string str2("Hello World2!");
     <div class="page-header">
         <h1>三、常量</h1>
     </div>
-    <h3>什么是常量？</h3>
+    <p>什么是常量？</p>
 <pre>
 5           // 一个整数 int
 -5          // 有符号整数 int
@@ -99,12 +97,12 @@ false       // 布尔值 bool
 
 等都是常量.
 </pre>
-    <h3>常量的定义 <small>#define</small></h3>
+    <p>@#define@ ：常量的定义</p>
 <pre>
 #define PI 3.14159
 #define NEWLINE '\n' 
 </pre>
-    <h3>常量的声明 <small>const</small></h3>
+    <p>@const@ ：常量的声明</p>
 <pre>
 const int pathwidth = 100;
 const char tabulator = '\t';
@@ -115,11 +113,11 @@ const char tabulator = '\t';
     <div class="page-header">
         <h1>四、输入输出</h1>
     </div>
-    <p>输出</p>
+    <p>@std::cout <<@ ：输出</p>
 <pre>
 cout << "Hello"; // cout为输出流 <<为插入运算符，把Hello插入到cout输出流中
 </pre>
-    <p>输入</p>
+    <p>@std::cin >>@ ：输入</p>
 <pre>
 int age;
 cin >> age;      // cin为输入流，接受输入的数据并通过>>给age变量
@@ -1161,6 +1159,7 @@ try {
     cout << "Standard exception: " << e.what() << endl;
 }
 </pre>
+
 table(table table-bordered).
 |_.exception|_=.description|
 |bad_alloc|thrown by new on allocation failure|
@@ -1168,9 +1167,67 @@ table(table table-bordered).
 |bad_exception|thrown when an exception type doesn't match any catch|
 |bad_typeid|thrown by typeid|
 |ios_base::failure|thrown by functions in the iostream library|
+
     <h3><small>11.4</small> 类型转换(Type Casting)</h3>
     <p>隐式转换(Implicit conversion)</p>
     <p>显式转换(Explicit conversion)</p>
     <p>动态转换(dynamic_cast)</p>
     <p>静态转换(static_cast)</p>
+
+    <h3><small>11.5</small> 预处理指令(Preprocessor Directives)</h3>
+    <p>@#define@ ：定义一个宏定义变量/函数</p>
+<pre>
+#define name value
+</pre>
+    <p>@#undef@ ：取消一个宏定义变量/函数</p>
+<pre>
+#undef name
+</pre>
+    <p>@#ifdef@ @ifndef@ @#if@ @#endif@ @#else@ @#elif@ ：常量表达式</p>
+<pre>
+#ifdef name             // 如果常量已经定义，则会执行
+// code here
+#endif
+
+#ifndef MAX_WIDTH       // 如果常量未定义，则会执行
+#define MAX_WIDTH 100
+#endif
+
+#if MAX_WIDTH > 200     // if用在常量表达式上，
+#undef MAX_WIDTH        // 取消定义
+#define MAX_WIDTH 200   // 重新定义
+
+#elsif MAX_WIDTH < 50   // else if
+#undef MAX_WIDTH        // 取消定义
+#define MAX_WIDTH 50    // 重新定义
+
+#else                   // else
+#undef MAX_WIDTH        
+#define MAX_WIDTH 100
+#endif                  // 结束if
+</pre>
+    <p>@#line@ ：</p>
+<pre>
+#line 1 "assigning variable"
+</pre>
+    <p>@#error@ ：</p>
+<pre>
+#ifndef __cplusplus
+#error A C++ compiler is required   // 如果__cplusplus没定义则会中断编译
+#endif
+</pre>
+    <p>@#include@ ：声明包含一个文件</p>
+<pre>
+#include "file"     // 先在当前路径下找，找不到再到默认标准头路径下找。
+#include <file>     // 直接在默认标准头路径下找。
+</pre>
+    <p>@#pragma@ ：对编译器进行配置的，如果编译器不支持某个#pragma的特定参数，这个参数会被忽略，不会产生出错。</p>
+    <p>预定义的宏名称：在任何时候都是定义好的</p>
+table(table table-bordered).
+|_.macro|_.value|
+|@__LINE__@|整数值，表示当前正在编译的行在源文件中的行数。|
+|@__FILE__@|字符串，表示被编译的源文件的文件名。|
+|@__DATE__@|一个格式为 "Mmm dd yyyy" 的字符串，存储编译开始的日期。|
+|@__TIME__@|一个格式为 "hh:mm:ss" 的字符串，存储编译开始的时间。|
+|@__cplusplus@|整数值，所有C++编译器都定义了这个常量为某个值。如果这个编译器是完全遵守C++标准的，它的值应该等于或大于199711L，具体值取决于它遵守的是哪个版本的标准。|
 </section>
